redefine configuration file, using yaml format

--- a/exec/redis-sharding.conf
+++ b/exec/redis-sharding.conf
@@ -1,12 +1,23 @@
-############################
-# Redis Sharding Config File
-############################
+##################################################
+#         Redis Sharding Config File
+##################################################
 
-# port defaults to 6379
-port: 6400
+# this config file is a YAML document
 
-# the backend servers, server weight defaults to 3
+bind: 0.0.0.0:6379
+maxClients: 5000
+virtualNode: 200
+
 servers:
-    # server-name host:port weight:3
-    - server1 192.168.1.1:6379
-    - server2 192.168.1.2:6380 weight:6
+    svr01:
+        address: 127.0.0.1:6379
+        check: 1500
+        weight: 3
+        dbs: 16
+
+    svr02:
+        address: 127.0.0.1:6379
+        check: 1500
+        weight: 3
+        dbs: 16
+
